# fossilized_pluto_QFF25

./: CMakeLists.txt  README.md
src/: main.cpp  quantum_accelerated_ops.cpp  quantum_accelerated_ops.h
src/fhe/: fhe_engine.cpp  fhe_engine.h
src/quantum/: gates.cpp  gates.h  qft.cpp  qft.h  qubit_register.cpp  qubit_register.h
